<resources>
    <string name="app_name">活动集市</string>
    <string name="network_is_not_available">网络连接失败，请检查你的网络设置</string>
    <string name="smoothlistview_header_hint_normal">下拉刷新</string>
    <string name="smoothlistview_header_hint_ready">松开刷新数据</string>
    <string name="smoothlistview_header_hint_loading">正在加载...</string>
    <string name="smoothlistview_header_last_time">上次更新时间：</string>
    <string name="smoothlistview_footer_hint_normal">查看更多</string>
    <string name="smoothlistview_footer_hint_ready">松开载入更多</string>
    <string name="login">登录</string>
    <string name="logging" >登录中</string>
    <string name="register">注册</string>
    <string name="registering">注册中</string>
    <string name="reset_password">提交中</string>
    <string name="guest">访客</string>
    <string name="pi_register">PI\t\t注\t\t册</string>
    <string name="username">用户名</string>
    <string name="password">密码：</string>
    <string name="auto_login_next">下次自动登录</string>
    <string name="email_register">邮箱注册</string>
    <string name="mobile_register">手机注册</string>
    <string name="please_input_username">请输入用户名</string>
    <string name="please_input_password">请输入密码</string>
    <string name="please_input_mobile">请输入手机号</string>
    <string name="please_input_verification_code">请输入验证码</string>
    <string name="please_input_email">请输入邮箱</string>
    <string name="register_email">用户邮箱</string>
    <string name="mobile_number">手机号码</string>
    <string name="input_password">输入密码</string>
    <string name="verification_code">验 证 码</string>
    <string name="get_verification_code">获取验证码</string>
    <string name="confirm_password">确认密码</string>
    <string name="please_confirm_password">请确认密码</string>
    <string name="please_input_password_again">请再一次输入密码</string>
    <string name="confirm">确认</string>
    <string name="confirm_5">确\t\t\t\t\t认</string>
    <string name="auth">认\t\t\t\t\t证</string>
    <string name="password_rule">密码由6-16位的数字、字母、字符组成</string>
    <string name="real_name">真实姓名</string>
    <string name="please_input_rel_name">请输入真实姓名</string>
    <string name="laboratory">实 验 室</string>
    <string name="laboratory_s">实 验 室</string>
    <string name="please_input_laboratory">请输入实验室</string>
    <string name="take_photo">拍\t\t\t\t\t\t照</string>
    <string name="pick_photo">从相册选择</string>
    <string name="cancel">取消</string>
    <string name="cancel_6">取\t\t\t\t\t\t消</string>
    <string name="cancel_5">取\t\t\t\t\t消</string>
    <string name="user_center">个人中心</string>
    <string name="message">消\t\t息</string>
    <string name="help">帮助</string>
    <string name="query">查\t\t\t\t\t\t找</string>
    <string name="instock">入\t\t库</string>
    <string name="outstock">出\t\t\t\t\t\t库</string>
    <string name="quit">退\t\t出</string>
    <string name="my_goods">我的物品</string>
    <string name="personal_info">个人资料</string>
    <string name="my_orders">我的订单</string>
    <string name="my_experiment">我的实验</string>
    <string name="today_work">今日工作</string>
    <string name="set_up">设\t\t置</string>
    <string name="history">历史记录</string>
    <string name="table_name">名\t\t称</string>
    <string name="table_localtion">位\t\t置</string>
    <string name="table_status">状\t态</string>
    <string name="table_picture">图\t片</string>
    <string name="apply_buy">申请购买</string>
    <string name="goods_name">名\t\t称</string>
    <string name="goods_name4">名\t\t\t\t称</string>
    <string name="goods_count">数\t\t量</string>
    <string name="goods_count1">数\t量</string>
    <string name="goods_count4">数\t\t\t\t量</string>
    <string name="goods_model">类\t\t型</string>
    <string name="goods_model4">类\t\t\t\t型</string>
    <string name="goods_vendor">厂家品牌</string>
    <string name="goods_dealers">经销商家</string>
    <string name="goods_phone_number">售后联系</string>
    <string name="goods_description">备\t\t注</string>
    <string name="submit">提交</string>
    <string name="goods_number">编\t\t号</string>
    <string name="goods_number4">编\t\t\t\t号</string>
    <string name="goods_money">金\t\t额</string>
    <string name="goods_localtion">位\t\t置</string>
    <string name="goods_localtion4">位\t\t\t\t置</string>
    <string name="materials_instock">耗材入库</string>
    <string name="reagents_instock">试剂入库</string>
    <string name="animals_instock">动物入库</string>
    <string name="instrument_instock">仪器入库</string>
    <string name="admin">管理员</string>
    <string name="admin_t">管\t理\t员</string>
    <string name="phone">联系电话</string>
    <string name="price">单价金额</string>
    <string name="manufacturer">厂家品牌</string>
    <string name="type">规格类型</string>
    <string name="parameter">规格货号</string>
    <string name="gene_type">基因类型</string>
    <string name="modle">规格型号</string>
    <string name="share">共\t享</string>
    <string name="unshare">非共享</string>
    <string name="share_protocol">关于共享</string>
    <string name="share_protocol_content">\u3000\u3000当您勾选共享后，意味着入库的本物品（耗材/试剂/动物/仪器）及其入库信息都能出现在U-lab的查找结果中，U-lab认证用户可以对此件物品进行借用/使用登记，在征得您的同意后，双方在线下进行物品的实物借用过程。\n
\u3000\u3000当您勾选共享后，共享物品的所有权仍属于您。借用方发表所有与共享物品相关论文，须声明系您所提供。共享物品仅供教学或学术研究之用,若涉及第三方或买卖，请双方在线下自行商订授权事宜。\n
\u3000\u3000共享物品之转移应依据相关规定订定安全等级，履行生物安全防护责任及采取必要之措施；并遵守相关法律规定及相关法令规定与相关要求，违者应负法律责任。
</string>
    <string name="text_search">查\t\t找</string>
    <string name="instock_success">入库成功</string>
    <string name="materials">耗\t材</string>
    <string name="reagents">试\t剂</string>
    <string name="animals">动\t物</string>
    <string name="laboratory_intro">实验室简介</string>
    <string name="laboratory_persons">人员信息</string>
    <string name="laboratory_goods_list">物品清单</string>
    <string name="laboratory_installment_list">仪器清单</string>
    <string name="laboratory_financial_statistics">财务统计</string>
    <string name="laboratory_introduction">实验室介绍</string>
    <string name="research_direction">研究方向</string>
    <string name="name">姓名：</string>
    <string name="common_problems">常\t\t\t见\t\t\t问\t\t\t题</string>
    <string name="please_input_query_problem">请输入查询内容</string>
    <string name="goods_management">管理</string>
    <string name="goods_add">添加</string>
    <string name="my_personal_info">个人资料</string>
    <string name="education">学\t\t\t\t历</string>
    <string name="unit">所在单位</string>
    <string name="school">毕业院校</string>
    <string name="mobile">手机</string>
    <string name="email">邮箱</string>
    <string name="save">保存</string>
    <string name="receive_order">借出物品</string>
    <string name="send_order">借入物品</string>
    <string name="input_order">入库记录</string>
    <string name="output_order">出库记录</string>
    <string name="output_time">转出时间</string>
    <string name="order_time">订单时间</string>
    <string name="input_time">录入时间</string>
    <string name="receiver">接收者</string>
    <string name="sender">发出者</string>
    <string name="order_management">订单管理</string>
    <string name="new_project">+ 新建 Project</string>
    <string name="time">时\t\t\t间</string>
    <string name="experiment">实验</string>
    <string name="study_key">研究要点</string>
    <string name="introduce">简\t\t介</string>
    <string name="new_experiment">新建实验</string>
    <string name="experiment_name">实验名称</string>
    <string name="study_time">研究时间</string>
    <string name="study_content">研究内容</string>
    <string name="experiment_difficulty">实验难点</string>
    <string name="new_work">新建工作</string>
    <string name="work_title">标\t\t\t题</string>
    <string name="work_content">工作名称</string>
    <string name="custom_options">+ 自定义选项</string>
    <string name="push_message">消息推动：</string>
    <string name="language">语言选择:</string>
    <string name="account_management">账号管理</string>
    <string name="about">关于</string>
    <string name="change_password">修改密码</string>
    <string name="logout">退出登录</string>
    <string name="set_new_pwd">设置新密码:</string>
    <string name="confirm_pwd">确认新密码:</string>
    <string name="use_person">使\t用\t人</string>
    <string name="use_count">使用数量</string>
    <string name="use_time">使用时间</string>
    <string name="goods_register">需求登记</string>
    <string name="goods_register_success">登记成功</string>
    <string name="goods_register_">物品登记</string>
    <string name="instrument_register">仪器需求</string>
    <string name="scan_text">将二维码放入框内，即可自动扫描</string>
    <string name="outstock_success">出库成功</string>
    <string name="my_balance">我的余额</string>
    <string name="expenditure_category">分类支出</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="bar_chart">柱状图</string>
    <string name="email_not_empty">邮箱不能为空~</string>
    <string name="email_format_is_wrong">邮箱格式不正确~</string>
    <string name="password_not_empty">密码不能为空~</string>
    <string name="passwords_differ">两次密码不一致~</string>
    <string name="check_network_connection">请检查网络连接~</string>
    <string name="server_error">服务器错误~</string>
    <string name="client_error" translatable="false">客户端发生异常~</string>
    <string name="requesting">请求中...</string>
    <string name="error_account_exist">账号已存在</string>
    <string name="phone_number_is_empty">手机号码不能为空~</string>
    <string name="error_telephone_invalid">手机号码格式不正确~</string>
    <string name="error_phone_already_registed">手机号已经被注册~</string>
    <string name="verification_code_is_empty">验证码不能为空~</string>
    <string name="username_is_empty">用户名不能为空~</string>
    <string name="error_account_not_exist">账号不存在~</string>
    <string name="error_password_verify_failed">密码不正确~</string>
    <string name="error_user_not_verified">用户没有被认证,是否提交认证申请？</string>
    <string name="dialog_title">提示</string>
    <string name="already_verified">我已认证</string>
    <string name="reverify">马上认证</string>
    <string name="error_password_format_error">密码必须是数字和字母的组合~</string>
    <string name="uploading">上传中...</string>
    <string name="uploaded_success">上传成功</string>
    <string name="uploaded_failed">上传失败</string>
    <string name="error_dataupdate_failed">数据更新错误</string>
    <string name="error_laboratory_not_exist">实验室不存在~</string>
    <string name="error_head_image_not_exist">未上传头像~</string>
    <string name="reset_password_success">密码修改成功~</string>
    <string name="reset_password_failed">密码修改失败，请重试~</string>
    <string name="click_exit">再次点击退出程序</string>
    <string name="experiment_info_incomplete">实验信息不完整~</string>
    <string name="project_info_incomplete">Project信息不完整~</string>
    <string name="experiment_start_time">请选择实验开始时间</string>
    <string name="experiment_end_time">请选择实验结束时间</string>
    <string name="edit_success">修改成功</string>
    <string name="work_info_incomplete">工作信息不完整</string>
    <string name="info_incomplete">信息不完整</string>
    <string name="work_date">请选择时间</string>
    <string name="work_create_success">创建成功</string>
    <string name="work_edit_success">修改成功</string>
    <string name="in_use">使用中</string>
    <string name="usable">可用</string>
    <string name="error_item_not_enough">物品数量不足</string>
    <string name="goods_unit">单\t\t位</string>
    <string name="goods_unit4">单\t\t\t\t位</string>
    <string name="feedback">反馈</string>
    <string name="contact_phone">联系电话</string>
    <string name="contact_phone_hint">选填，便于我们与您联系</string>
    <string name="question_and_suggest">问题和建议</string>
    <string name="question_and_suggest_hint">请填写您对本产品的建议</string>
    <string name="complete_info">完善信息</string>
    <string name="detail_address">详情地址:</string>
    <string name="sex">性别：</string>
    <string name="identity">身份：</string>
    <string name="lab_name">实验室名称：</string>
    <string name="area">所在区域：</string>
    <string name="profile_name_hint">请填写真实姓名，填写后无法修改</string>
    <string name="register_phone_hint">请输入有效手机号</string>
    <string name="register_get_check">获取验证码</string>
    <string name="register_check_hint">请输入验证码</string>
    <string name="register_password_hint">设置密码（6到20位字符）</string>
    <string name="register_contract_hint">注册代表您已同意《U-Lab用户协议》</string>
    <string name="register_in_email">点此用邮箱注册</string>
    <string name="register_password_confirm">重新输入密码</string>
</resources>