<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:divider="@drawable/divider_linear_layout"
    android:orientation="vertical"
    android:showDividers="beginning|middle|end">

    <LinearLayout
        android:layout_width="match_parent"
        android:background="@drawable/bg_user_introduce"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:paddingTop="35dp">

        <TextView
            android:id="@+id/tv_feedback_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawableLeft="@drawable/arrow_left_white"
            android:gravity="center_horizontal"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:text="@string/feedback"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="18dp"
        android:gravity="bottom"
        android:text="@string/question_and_suggest"
        android:textColor="#999999"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="#FFFFFF">

        <EditText
            android:id="@+id/et_feedback_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="13dp"
            android:background="@null"
            android:hint="@string/question_and_suggest_hint"
            android:textColor="#333333"
            android:textColorHint="#999999"
            android:textSize="15sp" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="22dp"
        android:gravity="bottom"
        android:text="@string/contact_phone"
        android:textColor="#999999"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF">

        <EditText
            android:id="@+id/et_feedback_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@null"
            android:hint="@string/contact_phone_hint"
            android:paddingBottom="16dp"
            android:paddingTop="15dp"
            android:textColor="#333333"
            android:textColorHint="#999999"
            android:textSize="15sp" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_feedback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="45dp"
        android:background="@drawable/bg_corner_btn_blue"
        android:enabled="false"
        android:text="@string/submit"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />

</LinearLayout>