<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:divider="@drawable/divider_linear_layout"
    android:orientation="vertical"
    android:showDividers="beginning|middle|end">

    <LinearLayout
        android:background="@drawable/bg_user_introduce"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:paddingTop="35dp">

        <TextView
            android:id="@+id/tv_edit_info_title"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:text="@string/complete_info"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_edit_info_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:text="@string/save"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="17dp"
        android:background="#FFFFFF">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingLeft="15dp"
            android:text="@string/name"
            android:textColor="#666666"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/et_edit_info_name"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:ellipsize="end"
            android:gravity="center"
            android:hint="@string/profile_name_hint"
            android:maxLines="1"
            android:paddingRight="15dp"
            android:textColor="#333333"
            android:textColorHint="#999999"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_edit_info_sex"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="#FFFFFF">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingLeft="15dp"
            android:text="@string/sex"
            android:textColor="#666666"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tv_edit_info_sex"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="1"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:textColor="#333333"
            android:textSize="15sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="15dp"
            android:src="@drawable/arrow_right_gray" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_edit_info_identity"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="#FFFFFF">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingLeft="15dp"
            android:text="@string/identity"
            android:textColor="#666666"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tv_edit_info_identity"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="1"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:textColor="#333333"
            android:textSize="15sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="15dp"
            android:src="@drawable/arrow_right_gray" />
    </LinearLayout>

    <LinearLayout
        android:visibility="gone"
        android:id="@+id/ll_edit_info_pi_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="17dp"
            android:background="#FFFFFF">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:paddingLeft="15dp"
                android:text="@string/lab_name"
                android:textColor="#666666"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/et_edit_info_lab"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:ellipsize="end"
                android:gravity="center"
                android:maxLines="1"
                android:paddingRight="15dp"
                android:textColor="#333333"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_edit_info_area"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="#FFFFFF">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:paddingLeft="15dp"
                android:text="@string/area"
                android:textColor="#666666"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tv_edit_info_area"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:ellipsize="end"
                android:gravity="center"
                android:maxLines="1"
                android:paddingRight="15dp"
                android:textColor="#333333"
                android:textSize="15sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="15dp"
                android:src="@drawable/arrow_right_gray" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="#FFFFFF">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:paddingLeft="15dp"
                android:text="@string/detail_address"
                android:textColor="#666666"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/et_edit_info_detail"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:ellipsize="end"
                android:gravity="center"
                android:maxLines="1"
                android:paddingRight="15dp"
                android:textColor="#333333"
                android:textSize="15sp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>