<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F6F7"
    android:orientation="vertical">

    <LinearLayout
        android:background="@drawable/bg_user_introduce"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:paddingTop="35dp">

        <TextView
            android:id="@+id/tv_register_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawableLeft="@drawable/arrow_left_white"
            android:gravity="center_horizontal"
            android:paddingLeft="15dp"
            android:text="@string/register"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="6dp"
            android:paddingTop="17dp">

            <EditText
                android:id="@+id/et_register_phone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_weight="1"
                android:background="@null"
                android:drawableLeft="@drawable/register_phone_uncheck"
                android:drawablePadding="18dp"
                android:hint="@string/register_phone_hint"
                android:textColor="#333333"
                android:textColorHint="#F33D34"
                android:textSize="15sp" />

            <Button
                android:id="@+id/btn_register_check"
                android:layout_width="90dp"
                android:layout_height="32dp"
                android:layout_marginLeft="83dp"
                android:layout_marginRight="25dp"
                android:background="@drawable/bg_corner_btn_blue"
                android:gravity="center"
                android:text="@string/register_get_check"
                android:textColor="#FFFFFF"
                android:textSize="13sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:background="#ECECEC" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="15dp">

            <EditText
                android:id="@+id/et_register_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:background="@null"
                android:drawableLeft="@drawable/register_phone"
                android:drawablePadding="18dp"
                android:hint="@string/register_check_hint"
                android:textColor="#333333"
                android:textColorHint="#929292"
                android:textSize="15sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:background="#ECECEC" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal"
            android:paddingBottom="12dp">

            <EditText
                android:id="@+id/et_register_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_weight="1"
                android:background="@null"
                android:drawableLeft="@drawable/register_password"
                android:drawablePadding="18dp"
                android:hint="@string/register_password_hint"
                android:textColor="#333333"
                android:textColorHint="#929292"
                android:textSize="15sp" />

            <ImageView
                android:id="@+id/img_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="25dp"
                android:src="@drawable/register_password_enable" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:background="#ECECEC" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal"
            android:paddingBottom="12dp">

            <EditText
                android:id="@+id/et_register_password_confirm"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_weight="1"
                android:background="@null"
                android:drawableLeft="@drawable/register_password"
                android:drawablePadding="18dp"
                android:hint="@string/register_password_confirm"
                android:textColor="#333333"
                android:textColorHint="#929292"
                android:textSize="15sp" />

            <ImageView
                android:id="@+id/img_register_confirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="25dp"
                android:src="@drawable/password_ensure"
                android:visibility="gone" />
        </LinearLayout>
    </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:text="@string/register_contract_hint"
        android:textColor="#999999"
        android:textSize="11sp" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_corner_btn_blue"
        android:enabled="false"
        android:text="@string/register"
        android:textColor="@drawable/tc_register_btn"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv_register_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="36dp"
        android:layout_marginTop="15dp"
        android:gravity="right"
        android:text="@string/register_in_email"
        android:textColor="#57B6EF"
        android:textSize="13sp" />
</LinearLayout>